--- a/conda/build-environment.yaml
+++ b/conda/build-environment.yaml
@@ -16,7 +16,7 @@
 # under the License.
 
 # Build environment that can be used to build tvm.
-name: tvm-build
+name: hago
 
 # The conda channels to lookup the dependencies
 channels:
